--- a/src/content/style.less
+++ b/src/content/style.less
@@ -1,6 +1,10 @@
+@my-blue: #0061cf;
 
 .@{CLASS_WORD} {
-  font-style: normal;
+  font-style: inherit;
+  font-size: inherit;
+  font-family: inherit;
+  font-weight: inherit;
   border-radius: 2px;
   padding-left: 2px;
   padding-right: 2px;
@@ -44,15 +48,15 @@
   left: 0;
   padding: 0px;
   > div { 
+    font-size: 10px;
     > span {
-      margin: 0 2px;
       padding: 1px;
       cursor: pointer;
-      border: 1px solid black;
-      font-size: 10px;
       font-weight: bold;
+      margin: 0 2px;
+      border: 1px solid black;
       font-family: Arial, Helvetica, sans-serif;
-
+      
       &[disabled] {
         color: #666;
       }
@@ -79,5 +83,60 @@
 
   to {
     width: 100%;
+  }
+}
+
+.@{CLASS_SIDEBAR_WRAP} {
+  position: fixed;
+  top:0;
+  left:0;
+  width: 200px;
+  background: rgba(255,255,255,0.9);
+  border-right: 1px solid rgba(0,0,0,0.8);
+  height: 100%;
+  z-index: 99999999999;
+  display: flex;
+  font-size: 11px;
+  flex-direction: column;
+
+  label {
+    font-weight: normal;
+  }
+
+  .@{CLASS_SIDEBAR_TOOLBAR} {
+    border-bottom: 1px solid rgba(0,0,0,0.8);
+    line-height: 30px;
+    > a {
+      padding: 0 2px;
+      display: inline-block;
+      font-size: 11px;
+      line-height: 20px;
+      border: 1px solid @my-blue;
+      color: black;
+      &.selected {
+        background: @my-blue;
+        color: white;
+      }
+    }
+  }
+  .@{CLASS_SIDEBAR_WORDLIST} {
+    overflow: auto;
+    font-size: 14px;
+    color: #333;
+    background: rgba(255,255,255,0.8);
+    > div {
+      padding-left: 10px;
+      transition: all 0.3s;
+      &:hover {
+        background: @my-blue;
+        color: #fff;
+      }
+      &.@{CLASS_SIDEBAR_KNOWN_WORD} {
+        color: #999;
+        &:hover {
+          color: #ccc;
+        }
+      }
+    }
   }
 }
